style: isolate card padding to text elements to prevent overflow clipping of images

--- a/src/pages/Brands.module.css
+++ b/src/pages/Brands.module.css
@@ -62,7 +62,6 @@
 .card {
   background: #181818;
   border-radius: var(--br-15);
-  padding: 30px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -81,6 +80,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  padding: 30px 30px 0 30px;
   z-index: 2;
   position: relative;
 }
@@ -105,9 +105,10 @@
 
 .cardImageContainer {
   position: absolute;
-  top: -30px;
-  bottom: -30px;
-  right: -30px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
@@ -124,6 +125,7 @@
 .cardBottom {
   z-index: 2;
   margin-top: auto;
+  padding: 0 30px 30px 30px;
   position: relative;
 }
 
